--- a/app/src/main/res/layout/content_shopping_list_add.xml
+++ b/app/src/main/res/layout/content_shopping_list_add.xml
@@ -12,7 +12,12 @@
     <EditText
             android:ems="10"
             android:id="@+id/shopping_list_add_edit_text"
-            android:layout_height="45dp" android:layout_width="0dp" tools:layout_constraintTop_creator="1"
+            android:layout_height="45dp"
+            android:layout_width="0dp"
+            android:inputType="text"
+            android:lines="1"
+            android:maxLines="1"
+            tools:layout_constraintTop_creator="1"
             tools:layout_constraintRight_creator="1" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="16dp"
             tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="parent"
