--- a/app/src/main/res/layout/activity_shopping_list_manage.xml
+++ b/app/src/main/res/layout/activity_shopping_list_manage.xml
@@ -1,15 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp"
         tools:context="com.ibm.shoppinglist.ShoppingListManageActivity">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/shopping_list_recycler_view"
             android:scrollbars="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-</android.support.constraint.ConstraintLayout>
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"/>
+
+    <!--<LinearLayout-->
+            <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_margin="0dp">-->
+        <!--<CheckBox-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_margin="10dp"-->
+                <!--android:enabled="false"/>-->
+        <!--<EditText-->
+                <!--android:ems="10"-->
+                <!--android:id="@+id/shopping_list_manage_edit_text"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:inputType="text"-->
+                <!--android:textSize="16sp"-->
+                <!--android:lines="1"-->
+                <!--android:maxLines="1"-->
+                <!--android:layout_marginLeft="0dp"-->
+                <!--android:layout_marginTop="15dp"-->
+                <!--android:layout_marginRight="15dp"/>-->
+    <!--</LinearLayout>-->
+</LinearLayout>
