--- a/app/src/main/res/layout/shopping_lists_card_view.xml
+++ b/app/src/main/res/layout/shopping_lists_card_view.xml
@@ -8,25 +8,52 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        android:clickable="true">
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
-        <android.support.v7.widget.Toolbar
-                android:id="@+id/shopping_lists_card_toolbar"
+            android:orientation="vertical"
+            android:clickable="false">
+        <LinearLayout
                 android:layout_width="match_parent"
-                android:background="?attr/colorBackgroundFloating" android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+            <TextView
+                    android:id="@+id/shopping_lists_card_title_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="20sp"
+                    android:clickable="false"/>
+            <ImageButton
+                    android:id="@+id/shopping_lists_card_delete_button"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:clickable="true"
+                    android:background="@drawable/ic_delete_black_24dp"/>
+        </LinearLayout>
         <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/darker_gray" />
+                android:background="@android:color/darker_gray"
+                android:clickable="false" />
 
         <TextView
+                android:id="@+id/shopping_lists_card_items_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="x of y items checked"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:clickable="false" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
