--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.ibm.shoppinglist.MainActivity">
+        tools:context="com.ibm.shoppinglist.ShoppingListsActivity">
 
     <android.support.design.widget.AppBarLayout
             android:layout_height="wrap_content"
