--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_main"
-        tools:context="com.ibm.shoppinglist.MainActivity">
+        tools:context="com.ibm.shoppinglist.ShoppingListsActivity">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/shopping_lists_recycler_view"
