--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -9,6 +9,19 @@
         tools:showIn="@layout/activity_settings"
         tools:context="com.ibm.shoppinglist.SettingsActivity">
 
+    <TextView
+            android:id="@+id/shopping_list_card_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:inputType="text"
+            android:textSize="16sp"
+            android:text="@string/settings_sync_url"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
     <EditText
             android:ems="10"
             android:id="@+id/settings_sync_url_edit_text"
@@ -17,9 +30,12 @@
             android:inputType="text"
             android:lines="1"
             android:maxLines="1"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="16dp"
-            tools:layout_constraintLeft_creator="1" app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/shopping_list_card_text_view"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 </android.support.constraint.ConstraintLayout>
